# tlog

./: .gitignore  .goreleaser.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  go.mod  go.sum  justfile  pyproject.toml  tlog.py
.claude/: settings.local.json
.github/workflows/: ci.yml
.tlog/events/: 2026-01-15.jsonl  2026-01-16.jsonl  2026-01-17.jsonl  2026-01-18.jsonl  2026-01-19.jsonl  compacted.jsonl
cmd/tlog/: main.go  version.go
docs/: tlog-feedback-prompt.md
internal/tlog/: commands.go  state.go  storage.go  tlog_test.go  types.go
