[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tlog-cli"
version = "0.1.0"
description = "Append-only task log for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["cli", "task", "todo", "ai", "agent", "git"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Bug Tracking",
]

[project.scripts]
tlog = "tlog:main"

[project.urls]
Homepage = "https://github.com/youruser/tlog"
Repository = "https://github.com/youruser/tlog"

[tool.hatch.build.targets.wheel]
packages = ["."]
